--- a/style.css
+++ b/style.css
@@ -140,8 +140,14 @@ height: 24px;
     background-image: linear-gradient(to bottom, black, white);
 }
 
+#movie-thumbnail-vscroll-container {
+    width: 100vw;
+    margin: 0;
+    gap: 8px;
+}
+
 #movie-thumbnail-hscroll-wrapper {
-    background-color: #0E1318;
+    background-color: white;
     width: auto;
     height: 300px;
     overflow-x: scroll;
