--- a/style.css
+++ b/style.css
@@ -16,7 +16,17 @@ body {
 }
 
 #top-nav-icon-image-logo {
+    display: none;
     background-color: transparent;
+    width: 40px;
+    height: 59px;
+}
+
+#top-nav-icon-image-text {
+    font-size: 1.15rem;
+    line-height: 1.05rem;
+    color: red;
+    font-weight: 600;
 }
 
 .top-nav-btn {
@@ -34,6 +44,8 @@ body {
     margin: 4px 4px;
     padding-left: 1px;
     padding-right: 1.5px;
+    padding-top: 1px;
+    padding-bottom: 1px;
     border-radius: 7px;
     font-size: 10px;
     text-decoration: none;
@@ -55,6 +67,11 @@ body {
     height: 16px;
     border: black;
     border-radius: 25px;
+    padding: 0 2px;
+}
+
+#top-nav-onboarding-group {
+    padding: 1em;
 }
 
 #top-nav-profile-circle {
@@ -83,7 +100,10 @@ body {
 }
 
 #top-nav-icon-link-logo {
-    left: 0;
+    position: relative;
+    left: 0;background-color: transparent;
+    cursor: pointer;
+    text-decoration: none;
 }
 
 
@@ -180,7 +200,8 @@ button#banner-button-wl {
     line-height: 1.25rem;
 }
 
-#movie-thumbnail-vscroll-container {
+#movie-title-thumbnail-vscroll-container, 
+#movie-thumbnail-vscroll-apisection-container {
     position: sticky;
     /* display: flex; */
     width: 100vw;
@@ -190,7 +211,8 @@ button#banner-button-wl {
 
 
 
-#movie-thumbnail-hscroll-container {
+#movie-title-thumbnail-hscroll-container,
+#movie-thumbnail-hscroll-apisection-container {
     width: auto;
     height: auto;
     overflow-x: scroll;
@@ -208,11 +230,13 @@ button#banner-button-wl {
 
 
   
-#movie-thumbnail-hscroll-wrapper::-webkit-scrollbar {
+#movie-thumbnail-hscroll-wrapper::-webkit-scrollbar,
+#movie-thumbnail-hscroll-apisection-wrapper::-webkit-scrollbar {
     display: none; /* Chrome, Safari and Opera */
   }
 
-.hscroll-wrapper {
+.hscroll-wrapper,
+.hscroll-apisection-wrapper {
     display: inline-flex;
     flex-direction: column-reverse;
     width: 160px;
@@ -221,7 +245,8 @@ button#banner-button-wl {
     align-items: center;
 }
 
-.hscroll-wrapper:hover {
+.hscroll-wrapper:hover,
+.hscroll-apisection-wrapper:hover {
     opacity: 0.5;
     background-color: rgb(0 0 0 / 50%)
     
@@ -250,6 +275,7 @@ p[id='movie-title'] {
 #fa-rheart {
     position: absolute;
     display: inline-block;
+    z-index: auto;
     left: 0;
     top: 0;
 }
@@ -272,7 +298,8 @@ p[id='movie-title'] {
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-    .hscroll-wrapper {
+    .hscroll-wrapper,
+    .hscroll-apisection-wrapper {
         width: 160px;
     }
 }
@@ -289,7 +316,8 @@ p[id='movie-title'] {
     #banner-text-description {
         max-width: 70%;
     }
-    .hscroll-wrapper {
+    .hscroll-wrapper,
+    .hscroll-apisection-wrapper {
         width: 200px;
     }
         
@@ -297,7 +325,8 @@ p[id='movie-title'] {
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-    .hscroll-wrapper {
+    .hscroll-wrapper,
+    .hscroll-apisection-wrapper {
         width: 240px;
     }
 }
@@ -307,7 +336,8 @@ p[id='movie-title'] {
     #banner-text-description {
         max-width: 50%;
     }
-    .hscroll-wrapper {
+    .hscroll-wrapper,
+    .hscroll-apisection-wrapper {
         width: 280px;
     }
 }
@@ -317,7 +347,8 @@ p[id='movie-title'] {
    #banner-text-description {
         max-width: 35%;
    }
-   .hscroll-wrapper {
+   .hscroll-wrapper,
+   .hscroll-apisection-wrapper {
        width: 360;
    }
 }
