--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 :root {
     --grid-repeat: 100;
+    --shadowColor: #a9a9a963;
+    --titleColor: #d9b9b984;
 }
 
 html {
@@ -85,7 +87,7 @@ body {
 #nav-signup-bg-offset,
 #nav-account-bg-offset, 
 #nav-logout-bg-offset {
-    color: darkgray;
+    color: var(--shadowColor);
     cursor: pointer;
     font-size: 1.05rem;
     line-height: 0.75rem;
@@ -134,7 +136,7 @@ body {
 #top-nav-btn-container {
     display: flex;
     gap: 8px;
-    font-size: 1.025em;
+    font-size: 0.9em;
 }
 
 #top-nav-btn {
@@ -147,6 +149,10 @@ body {
     cursor: pointer;
     background-color: transparent;
     text-decoration: none; 
+}
+
+#nav-menu {
+    display: none;
 }
 
 
@@ -235,17 +241,24 @@ button#banner-button-wl {
 } 
 
 #banner-bottom-shadow-blur {
-    height: 20px;
+    height: 1em;
     margin: 0;
-    background-image: linear-gradient(to bottom, black, darkgray);
-    background-color: black;
+    /* box-shadow: 0 0 0 0 var(--shadowColor); */
+    /* background-color: black; */
+    background-image: linear-gradient(to bottom, var(--shadowColor), var(--shadowColor) 50%, var(--shadowColor) 50%, var(--shadowColor) 50%);
+    -webkit-filter: blur(1em); /* For older browsers */
+    filter: blur(1em);
+    /* filter: drop-shadow(var(--shadowColor) 1rem 1rem 1rem); */
 }
 
 #banner-left-shadow-blur {
     width: 20px;
     margin: 0;
-    background-image: linear-gradient(to right, black, darkgray);
-    background-color: black;
+    background-image: linear-gradient(to bottom, var(--shadowColor), var(--shadowColor) 50%, var(--shadowColor) 50%, var(--shadowColor) 75%);
+    background-color: var(--shadowColor);
+    -webkit-filter: blur(1em); /* For older browsers */
+    filter: blur(1em);
+    /* filter: drop-shadow(var(--shadowColor) 1rem 1rem 1rem); */
 }
 
 #top-section-banner-container {
@@ -273,7 +286,7 @@ button#banner-button-wl {
 
 #movie-genre,
 #movie-apisection-title {
-    color: darkgray;
+    color: var(--titleColor);
     font-size: 1.75rem;
     line-height: 1.25;
     margin-bottom: 0;
@@ -352,41 +365,55 @@ button#banner-button-wl {
  {
     opacity: 0.5;
     background-color: rgb(0 0 0 / 50%);
+        p[id="movie-title"] {
+            opacity: 1;
+            z-index: 1;
+        } 
+        & #fa-rheart {
+            display: block;
+        }
 
 }
 
 img[id='movie-thumbnail'] {
     display: inline-block;
-    width: 100%;
-    height: auto;
+    width: 15.75em;
+    height: 15em;
     border-radius: 1.8%;
     box-shadow: 10px -8px #55525259;
-    transform: scaleY(0.7) scaleX(.9);
+    transform: scaleY(0.7) scaleX(.8);
+    object-fit: fill;
 }
 
 p[id='movie-title'] {
     display: flex;
     position: relative;
-    top: -55%;
+    top: -50%;
     /* left: 50%; */
     align-items: center;
     justify-content: center;
-    color: darkgray;
-    font-size: 1em; /* 14px */
+    color: #3b0303;
+    font-size: 1.25em; /* 14px */
     /* line-height: 0.75em; */ /* 20px */
+    padding: 0 12px;
+    opacity: 0;
+    z-index: 0;
 }
+
 
 
 
 #fa-rheart {
     position: relative;
     z-index: auto;
-    right: 86px;
-    top: 26px;
+    top: 30%;
+    right: 40%;
+    transform: scale(1.3);
 }
 
 #fa-sheart {
     position: relative;
+    z-index: auto;
     display: none;
     left: 21px;
     top: 50px;
@@ -411,7 +438,7 @@ p[id='movie-title'] {
 
     .hscroll-wrapper,
     .hscroll-apisection-wrapper {
-        width: 60px;
+        width: 260px;
     }
 }
 
@@ -430,8 +457,10 @@ p[id='movie-title'] {
     }
     .hscroll-wrapper,
     .hscroll-apisection-wrapper {
-        width: 100px;
+        width: 200px;
     }
+
+    
         
 }
 
@@ -439,7 +468,7 @@ p[id='movie-title'] {
 @media only screen and (min-width: 768px) {
     .hscroll-wrapper,
     .hscroll-apisection-wrapper {
-        width: 140px;
+        width: 240px;
     }
 }
 
@@ -450,7 +479,7 @@ p[id='movie-title'] {
     }
     .hscroll-wrapper,
     .hscroll-apisection-wrapper {
-        width: 180px;
+        width: 280px;
     }
 }
 
@@ -461,7 +490,7 @@ p[id='movie-title'] {
    }
    .hscroll-wrapper,
    .hscroll-apisection-wrapper {
-       width: 260px;
+       width: 360px;
    }
 }
 
