--- a/style.css
+++ b/style.css
@@ -70,8 +70,8 @@ body {
     margin: 4px 4px;
     padding-left: 3px;
     padding-right: 3.5px;
-    padding-top: 8px;
-    padding-bottom: 8px;
+    padding-top: 12px;
+    padding-bottom: 12px;
     border-radius: 7px;
     font-size: 1em;
     text-decoration: none;
@@ -99,6 +99,7 @@ body {
 #top-nav-onboarding-group {
     display: flex;
     flex-direction: row;
+    margin: 4px 0;
     padding: 1em;
     gap: 8px;
 }
@@ -348,6 +349,28 @@ button#banner-button-wl {
     display: none; /* Chrome, Safari and Opera */
 }
 
+#vscroll-icons-container-left,
+#vscroll-icons-container-right {
+    display: inline-flex;
+    position: relative;
+    gap: 0;
+    background-color: aqua;
+    mix-blend-mode: difference;
+    filter: invert(100%);
+    -webkit-filter: invert(100%);
+    justify-content: flex-end;
+    cursor: pointer;  
+
+}
+
+#vscroll-icons-container-left { 
+    left: 96%;
+}
+    
+#vscroll-icons-container-right {
+    left: 0%;
+}
+
 .movie-genre,
 .movie-apisection-title {
     color: var(--titleColor);
@@ -356,16 +379,23 @@ button#banner-button-wl {
     margin-bottom: 0;
 }
 
-#chevron-wrapper {
-
+.chevron-wrapper,
+.chevron-apisection-wrapper {
+    display: flex;
+    gap: 8px;
+   
 }
 
-#button-chevron-left,
-#button-chevron-right,
-#button-chevron-apisection-left,
-#button-chevron-apisection-right {
-    background-color: transparent;
+
+
+.button-chevron-left,
+.button-chevron-right,
+.button-chevron-apisection-left,
+.button-chevron-apisection-right {
     border: none;
+    background-color: tan;
+    mix-blend-mode: lighten;
+    border-radius: 100%;
 }
 
 #left-chevron, 
@@ -377,18 +407,31 @@ button#banner-button-wl {
     background-color: whitesmoke;
 }
 
+i[class="fas fa-chevron-circle-left"],
+i[class="fas fa-chevron-circle-right"]
+{
+    font-size: 1.55em;
+    /* line-height: 1.25em; */
+    mix-blend-mode: darken;
+    
+}
 
 
 
-#movie-title-thumbnail-vscroll-container, 
+
+#movie-title-thumbnail-vscroll-container {
+    padding-left: 0.5em;
+    width: 100vw;
+}
+
 #movie-title-thumbnail-vscroll-container-apisection {
-    padding-left: 1em;
+    padding-left: 2.5em;
     width: 100vw;
 }
 
 #movie-title-thumbnail-vscroll-container-apisection {
     height: max-content;
-    /* margin: 1em; */
+    margin: 0 1em;
     }
 
 
@@ -400,11 +443,10 @@ button#banner-button-wl {
     overflow-x: scroll;
     overflow-y: hidden;
     margin: 0 auto;
+    padding: 0.05em;
     display: grid;
     grid-template-columns: repeat(var(--grid-repeat), auto) !important;
     grid-gap: 0 16px;
-    padding: 28px 4px;
-    /* padding-right: 0; */
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
     border-radius: 10px;
@@ -422,9 +464,10 @@ button#banner-button-wl {
 .hscroll-wrapper,
 .hscroll-apisection-wrapper
  {
-    display: inline-flex;
+    display: flex;
     flex-direction: column-reverse;
-    width: 3.75rem;
+    width: 22.75rem;
+    padding: 0.05em;
     cursor: pointer;
     justify-content: center;
     align-items: center;
@@ -445,58 +488,71 @@ button#banner-button-wl {
                z-index: 1; 
                
         } 
-        & i {
-              display: flex; 
+        & i[class="fa-regular fa-heart"] {
+             opacity: 1;
+              
         }
+        & img[class='movie-thumbnail'] {
+         opacity: 0.6;
+        }
+      
 
 }
 
 img[class='movie-thumbnail'] {
-    display: inline-flex;
+    display: flex;
     width: 142%;
     height: 15em;
     max-width: inherit;
     border-radius: 1.8%;
     box-shadow: 10px -8px #55525259;
-    transform: scaleY(0.7) scaleX(.7);
+    transform: scaleY(0.7) scaleX(0.7);
     object-fit: fill;
     aspect-ratio: auto;
+    z-index: 0;
 }
 
 p[class='movie-title'] {
     display: flex;
     position: relative;
+    text-align: center;
     padding: 0;
     margin: 0 auto;
-    bottom: 50%;
+    bottom: 6.125em;
     /* left: 0%; */
     /* justify-content: center; */
-    color: wheat;
+    color: brown; /* #5e3e03fc; */
     font-size: 1.25em; /* 14px */
     /* line-height: 0.75em; */ /* 20px */
-    padding: 0 12px;
-    opacity: 1; 
+    padding: 0 8px;
+    opacity: 0; 
     z-index: 1; 
 }
 
 
 
-#fa-rheart {
-    position: absolute;
-    z-index: auto;
-    top: 30%;
-    right: 40%;
-    transform: scale(1.3);
-    display: none;
+i[class="fa-regular fa-heart"]  {
+      position: relative;
+      z-index: 1;
+      opacity: 0;
+      top: 60px;
+      right: 45%;
+      transform: scale(1.5);
+      display: block;
+      filter: invert(100%);
 }
 
-#fa-sheart {
-    position: relative;
-    z-index: auto;
-    display: none;
-    left: 21px;
-    top: 50px;
+
+i[class="fa-solid fa-heart"] {
+      position: relative;
+      z-index: 1;
+      top: 60px;
+      right: 45%;
+      transform: scale(1.5);
+      display: none;
+      filter: invert(100%);
 }
+
 
 #material-icons {
     position: absolute;
@@ -521,7 +577,7 @@ p[class='movie-title'] {
 
     .hscroll-wrapper,
     .hscroll-apisection-wrapper {
-        width: 11.25rem;
+        width: 14.25rem;
     }
 }
 
@@ -540,7 +596,7 @@ p[class='movie-title'] {
     }
     .hscroll-wrapper,
     .hscroll-apisection-wrapper {
-        width: 12.5rem;
+        width: 15.5rem;
     }
 
     
@@ -551,7 +607,7 @@ p[class='movie-title'] {
 @media only screen and (min-width: 768px) {
     .hscroll-wrapper,
     .hscroll-apisection-wrapper {
-        width: 15rem;
+        width: 18rem;
     }
 }
 
@@ -562,7 +618,7 @@ p[class='movie-title'] {
     }
     .hscroll-wrapper,
     .hscroll-apisection-wrapper {
-        width: 17.5rem;
+        width: 20.5rem;
     }
 }
 
@@ -573,7 +629,7 @@ p[class='movie-title'] {
    }
    .hscroll-wrapper,
    .hscroll-apisection-wrapper {
-       width: 22.5rem;
+       width: 25.5rem;
    }
 }
 
