--- a/style.css
+++ b/style.css
@@ -13,16 +13,16 @@
     --titleColor: #d9b9b984;
 }
 
-html {
+/* html {
     background-color: black !important;
     box-sizing: border-box;
-}
+} */
 
 *, *::before, *::after {
     box-sizing: inherit;
 }
 
-body {
+/* body {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -31,7 +31,7 @@ body {
     overflow-x: hidden;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
-}
+} */
 
 /* ==========================================================================
    Custom Styles
@@ -421,27 +421,27 @@ i[class="fas fa-chevron-circle-right"]
 
 
 
-#movie-title-thumbnail-vscroll-container {
+#movie-title-image-vscroll-container {
     padding-left: 8px;
     padding-right: 8px;
     width: 100vw;
     margin-right: -52px;
 }
 
-#movie-title-thumbnail-vscroll-container-apisection {
+#movie-title-image-vscroll-container-apisection {
     padding-left: 3.5em;
     width: 100vw;
 }
 
-#movie-title-thumbnail-vscroll-container-apisection {
+#movie-title-image-vscroll-container-apisection {
     height: max-content;
     margin: 0 1.2em;
     }
 
 
 
-.movie-title-thumbnail-hscroll-container, 
-.movie-title-thumbnail-hscroll-apisection-container {
+.movie-title-image-hscroll-container, 
+.movie-title-image-hscroll-apisection-container {
     width: auto;
     height: auto;
     overflow-x: scroll;
@@ -458,13 +458,13 @@ i[class="fas fa-chevron-circle-right"]
     justify-content: flex-start;
 }
 
-movie-title-thumbnail-hscroll-apisection-container {
+movie-title-image-hscroll-apisection-container {
     height: 15.2em;
 }
 
   
-#movie-thumbnail-hscroll-wrapper::-webkit-scrollbar,
-#movie-thumbnail-hscroll-apisection-wrapper::-webkit-scrollbar {
+#movie-image-hscroll-wrapper::-webkit-scrollbar,
+#movie-image-hscroll-apisection-wrapper::-webkit-scrollbar {
     display: none; /* Chrome, Safari and Opera */
 }
 
@@ -499,14 +499,14 @@ movie-title-thumbnail-hscroll-apisection-container {
                 opacity: 1;
               
         }
-        & img[class='movie-thumbnail'] {
+        & img[class='movie-image'] {
                 opacity: 0.6;
         }
       
 
 }
 
-img[class='movie-thumbnail'] {
+img[class='movie-image'] {
     display: flex;
     width: 142%;
     height: 17em;
